css/styles.css
/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
html {
    line-height: 1.15;
    /* 1 */
    -webkit-text-size-adjust: 100%;
    /* 2 */
    font-family: josefin sans, sans-serif;
    color: aliceblue
}

body {
    line-height: 1.8em;
    margin: 0;
    background-color: #35242C;
    align-items: center;
    justify-content: center;
}

.content {
    justify-content: center;
    display: flex;
    align-items: start;
}

.content .intro {
    width: 40em;
    padding: 3em;
    display: flex;
    align-items: start;
}

.intro .avatar {
    margin-bottom: 10px;
    border-radius: 10%;
    width: 20em;
    transform: translateX(-10%);
}

img {
    border-style: outset;
}

@font-face {
    font-family: josefin-sans;
    src: url('..\assets\fonts\JosefinSans-VariableFont_wght.ttf') format('truetype');
}

.link {
    color: #ddd;
    text-decoration: none;
    border-bottom: dotted 2px #ddd;
    padding-bottom: 2px;
    font-size: 1em;
    font-weight: 500;
}

.link:hover {
    color: deeppink;
    border-bottom: solid 2px deeppink;
}

.btn {
    margin: 10px;
    border: none;
    background: 0 0;
    cursor: pointer
}



#navbar {
    padding: 20px 0;
    background-color: #211D1F;
    width: 100%;
    display: flex;
    justify-content: center;
}

#navbar .item {
    font-weight: 700;
    text-transform: lowercase;
    padding: 10px 0;
    margin: 0 30px;
    font-size: 1.2em;
}

#navbar .item.active {
    color: deeppink;
    border-bottom: solid 2px deeppink;
}

h2 {
    margin: 0;
    color: aliceblue
}

p {
    margin: 20px 0;
    color: aliceblue
}

